some jar, all entity ,baseDao

--- a/EasyBuy/.settings/org.eclipse.wst.common.component
+++ b/EasyBuy/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
     <wb-module deploy-name="EasyBuy">
         <wb-resource deploy-path="/" source-path="/WebRoot"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <property name="context-root" value="/EasyBuy"/>
         <property name="java-output-path" value="/EasyBuy/WebRoot/WEB-INF/classes"/>
     </wb-module>
