--- a/EasyBuy/.settings/org.eclipse.wst.common.component
+++ b/EasyBuy/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="EasyBuy">
-        <wb-resource deploy-path="/" source-path="/WebRoot"/>
+        <wb-resource deploy-path="/" source-path="/WebRoot" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <property name="context-root" value="/EasyBuy"/>
         <property name="java-output-path" value="/EasyBuy/WebRoot/WEB-INF/classes"/>
+        <property name="me-merge-utility-modules" value="true"/>
     </wb-module>
 </project-modules>
